--- a/style.css
+++ b/style.css
@@ -3,6 +3,18 @@ body{
     background: url(/pics/Brighton.png) center/cover no-repeat ;
    
 }
+/* this style placed the mancity logo at the left side of the table */
+td img{
+    width: 27px;
+    height: 25px;
+    float: left;
+    margin: 2px;
+    padding: 2px;
+}
+td{
+    
+}
+/* the logo of premier league is been center with this style */
 img{
     display: block;
     margin-left: auto;
@@ -32,7 +44,8 @@ td{
     background: blueviolet;
     padding: 5px;
     border-radius: 5px;
-    opacity: .8;
+    
+    /* opacity: .8; */
 }
 ul li {
     display: inline-block;
