--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ body{
     background: url(/pics/Brighton.png) center/cover no-repeat ;
    
 }
+thead tr th{
+    padding: 8px;
+}
 /* this style placed the mancity logo at the left side of the table */
 td img{
     width: 27px;
@@ -11,15 +14,16 @@ td img{
     margin: 2px;
     padding: 2px;
 }
-td{
-    
+img {
+    padding: 5px;
+    margin: 0;
 }
 /* the logo of premier league is been center with this style */
-img{
+/* img{
     display: block;
     margin-left: auto;
     margin-right: auto;
-}
+} */
  ul{
     background: url(/pics/Screenshot\ \(337\).png);
     background-repeat: no-repeat;
@@ -40,6 +44,9 @@ thead{
 #w{
     color: lightgreen;
 }
+#mp{
+    color: pink;
+}
 td{
     background: blueviolet;
     padding: 5px;
@@ -50,12 +57,16 @@ td{
 ul li {
     display: inline-block;
     padding: 5px;
-    color: red;
 }
 ul a{
    text-decoration: none;
    color: red;
    text-align: center;
+}
+ul li a:hover {
+    background: yellow;
+    padding: 5px;
+    border-radius: 20%;
 }
 ul li{
     list-style-type: none;
@@ -67,6 +78,14 @@ img{
 }
 table{
    color: white;
+}
+#vue {
+    color: black;
+    font-weight: bold;
+}
+table:hover {
+   box-shadow: -10px -10px 2px 2px white;
+   border-radius: 5%;
 } 
 th{
     color: gold;
@@ -81,4 +100,67 @@ div{
     height: 10px;
     border-radius: 50%;
 }
- 
+footer{
+    text-transform: capitalize;
+    font-weight: bold;
+    padding: 5px;
+    margin-top: 5px;
+}
+ hr{
+    line-height: 2px;
+    padding: 0;
+     font-weight: bolder;
+     border-color: gold;
+     box-shadow: 2px 3px black;
+ }
+ h1{
+     text-align: center;
+ }
+ .uefa{
+     background: blue;
+     width: 10px;
+     height: 10px;
+ }
+ .europa{
+     background: orange;
+     width: 10px;
+     height: 10px;
+ }
+ #orange{
+    position: relative;
+    top: -29px;
+    right: -29px;
+    color: indianred;
+    font-weight: bold;
+ }
+ #green{
+     position: relative;
+     top: -29px;
+     right: -29px;
+     color: green;
+     font-weight: bold;
+ }
+ .confer{
+    background: green;
+    width: 10px;
+    height: 10px;
+ }
+ #white{
+    position: relative;
+    top: -29px;
+    right: -29px;
+    color: white;
+    font-weight: bold;
+ }
+ #red{
+    position: relative;
+    top: -29px;
+    right: -29px;
+    color: red;
+    font-weight: bold;
+ }
+ .rel{
+    background: black;
+    width: 10px;
+    height: 10px;
+ }
