--- a/style.css
+++ b/style.css
@@ -86,6 +86,8 @@ table{
 table:hover {
    box-shadow: -10px -10px 2px 2px white;
    border-radius: 5%;
+   transition: 1s;
+   transform: translate(50px);
 } 
 th{
     color: gold;
